--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
     <title>FS-App-Template</title>
     <link rel="stylesheet" href="/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <script src="https://kit.fontawesome.com/6da1285e00.js" crossorigin="anonymous"></script>
 
-    <script defer src="bundle.js"></script>
+    <script defer src="/bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
