yet more styling

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/6da1285e00.js" crossorigin="anonymous"></script>
+    <link href="https://db.onlinewebfonts.com/c/3b6b073abc7a7d19802fb199bbc76f5d?family=Room+205" rel="stylesheet">
 
     <script defer src="/bundle.js"></script>
   </head>
