--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
-    <title>FS-App-Template</title>
+    <title>Grace Shopper</title>
     <link rel="stylesheet" href="/style.css" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/6da1285e00.js" crossorigin="anonymous"></script>
