lots of styling and bug fixes across the board

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>Grace Shopper</title>
     <link rel="stylesheet" href="/style.css" />
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;0,800;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6da1285e00.js" crossorigin="anonymous"></script>
     <link href="https://db.onlinewebfonts.com/c/3b6b073abc7a7d19802fb199bbc76f5d?family=Room+205" rel="stylesheet">
 
